--- a/index.html
+++ b/index.html
@@ -1,1 +1,84 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>depart.vip</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        header {
+            background-color: #2c3e50;
+            color: white;
+            padding: 20px 0;
+            text-align: center;
+        }
+        h1 {
+            margin: 0;
+            font-size: 2.5em;
+        }
+        .container {
+            max-width: 800px;
+            margin: 30px auto;
+            padding: 0 20px;
+            text-align: center;
+        }
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            gap: 15px;
+            margin-top: 30px;
+        }
+        .btn {
+            display: inline-block;
+            padding: 12px 24px;
+            background-color: #3498db;
+            color: white;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 1.1em;
+            transition: background-color 0.3s;
+            border: none;
+            cursor: pointer;
+        }
+        .btn:hover {
+            background-color: #2980b9;
+        }
+        @media (min-width: 600px) {
+            .button-container {
+                flex-direction: row;
+                justify-content: center;
+            }
+        }
+    </style>
+</head>
+<body>
+    <header>
+        <h1>depart.vip</h1>
+    </header>
+    
+    <div class="container">
+        <div class="button-container">
+            <button class="btn" onclick="location.href='#script'">Get Script</button>
+            <button class="btn" onclick="location.href='#about'">About Us</button>
+            <button class="btn" onclick="location.href='#connect'">Connect</button>
+        </div>
+    </div>
 
+    <!-- Placeholder sections that the buttons would link to -->
+    <section id="script" style="height: 500px; padding: 20px;">
+        <!-- Script content would go here -->
+    </section>
+    <section id="about" style="height: 500px; padding: 20px; background-color: #eaeaea;">
+        <!-- About content would go here -->
+    </section>
+    <section id="connect" style="height: 500px; padding: 20px;">
+        <!-- Connect content would go here -->
+    </section>
+</body>
+</html>
