--- a/index.html
+++ b/index.html
@@ -23,11 +23,35 @@
             border: 2px solid white;
             margin: 10px;
             border-radius: 5px;
+            position: relative;
         }
         h1 {
             margin: 0;
             font-size: 2.5em;
             text-shadow: 0 0 10px rgba(255,255,255,0.3);
+        }
+        .menu-toggle {
+            position: absolute;
+            top: 20px;
+            right: 20px;
+            cursor: pointer;
+            display: flex;
+            flex-direction: column;
+            gap: 5px;
+        }
+        .menu-line {
+            width: 25px;
+            height: 3px;
+            background-color: white;
+            border-radius: 3px;
+        }
+        .description {
+            margin: 20px auto;
+            max-width: 800px;
+            padding: 0 20px;
+            font-size: 1.2em;
+            color: rgba(255,255,255,0.8);
+            text-align: center;
         }
         .container {
             max-width: 800px;
@@ -87,12 +111,58 @@
                 justify-content: center;
             }
         }
+        .mobile-menu {
+            display: none;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0,0,0,0.9);
+            z-index: 100;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            gap: 20px;
+        }
+        .mobile-menu.show {
+            display: flex;
+        }
+        .mobile-btn {
+            padding: 15px 30px;
+            font-size: 1.5em;
+            width: 80%;
+            max-width: 300px;
+        }
+        .close-menu {
+            position: absolute;
+            top: 30px;
+            right: 30px;
+            font-size: 2em;
+            cursor: pointer;
+        }
     </style>
 </head>
 <body>
     <header>
         <h1>depart.vip</h1>
+        <div class="menu-toggle" onclick="toggleMenu()">
+            <div class="menu-line"></div>
+            <div class="menu-line"></div>
+            <div class="menu-line"></div>
+        </div>
     </header>
+
+    <div class="mobile-menu" id="mobileMenu">
+        <span class="close-menu" onclick="toggleMenu()">×</span>
+        <button class="btn mobile-btn" onclick="showSection('script'); toggleMenu();">Get Script</button>
+        <button class="btn mobile-btn" onclick="showSection('about'); toggleMenu();">About Us</button>
+        <button class="btn mobile-btn" onclick="window.open('https://discord.gg/ufJzDKBrvF', '_blank');">Our Discord!</button>
+    </div>
+
+    <div class="description">
+        depart.vip, an upcoming script for skywars and bedwars
+    </div>
     
     <div class="container">
         <div class="button-container">
@@ -128,6 +198,11 @@
             if(section) {
                 section.style.display = 'block';
             }
+        }
+
+        function toggleMenu() {
+            const menu = document.getElementById('mobileMenu');
+            menu.classList.toggle('show');
         }
     </script>
 </body>
