--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
         header {
             background-color: #000000;
             color: white;
-            padding: 20px 0;
-            text-align: center;
+            padding: 15px 20px;
+            text-align: left;
             border: 2px solid white;
             margin: 10px;
             border-radius: 5px;
@@ -28,12 +28,12 @@
         }
         h1 {
             margin: 0;
-            font-size: 2.5em;
+            font-size: 1.25em; /* Half the original size */
             text-shadow: 0 0 10px rgba(255,255,255,0.3);
         }
         .menu-toggle {
             position: absolute;
-            top: 20px;
+            top: 15px;
             right: 20px;
             cursor: pointer;
             display: flex;
@@ -82,6 +82,12 @@
             gap: 15px;
             margin-top: 30px;
         }
+        .top-buttons {
+            display: flex;
+            justify-content: center;
+            gap: 15px;
+            margin-bottom: 15px;
+        }
         .btn {
             display: inline-block;
             padding: 12px 24px;
@@ -93,6 +99,8 @@
             transition: all 0.3s;
             border: 1px solid rgba(255,255,255,0.2);
             backdrop-filter: blur(5px);
+            width: 100%;
+            box-sizing: border-box;
         }
         .btn:hover {
             background-color: rgba(255, 255, 255, 0.2);
@@ -121,11 +129,16 @@
             margin-top: auto;
             border-top: 1px solid rgba(255,255,255,0.1);
             transition: filter 0.3s;
+            font-size: 0.625em; /* Half of 1.25em */
+        }
+        .credits {
+            margin-top: 10px;
+            font-size: 0.625em;
+            color: rgba(255,255,255,0.7);
         }
         @media (min-width: 600px) {
-            .button-container {
-                flex-direction: row;
-                justify-content: center;
+            .btn {
+                width: auto;
             }
         }
         /* Hamburger Menu Styles */
@@ -233,9 +246,11 @@
     
     <div class="container" id="mainContent">
         <div class="button-container">
-            <button class="btn" onclick="showSection('script')">Get Script</button>
+            <div class="top-buttons">
+                <button class="btn" onclick="showSection('script')">Get Script</button>
+                <button class="btn" onclick="window.open('https://discord.gg/ufJzDKBrvF', '_blank')">Our Discord!</button>
+            </div>
             <button class="btn" onclick="showSection('about')">About Us</button>
-            <button class="btn" onclick="window.open('https://discord.gg/ufJzDKBrvF', '_blank')">Our Discord!</button>
         </div>
 
         <div id="script" class="content-section">
@@ -251,6 +266,7 @@
 
     <footer>
         <p>&copy; 2025 depart.vip | All Rights Reserved</p>
+        <p class="credits">made by xlvics and delzq</p>
     </footer>
 
     <script>
